# ai-engineering

./: README.md  pyproject.toml
week1/: day1.ipynb
