[project]
name = "ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0",
    "bs4>=0.0.2",
    "google-genai>=2.13.0",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.60.0",
]
